Authentication using Facebook
environs

--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -27,4 +27,13 @@
       </a>
     </p>
   </div>
+  <div class="social">
+    <ul>
+      <li class="facebook">
+        <a href="{% url 'social:begin' 'facebook' %}">
+          Войти через Facebook
+        </a>
+      </li>
+    </ul>
+  </div>
 {% endblock content %}
