--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -34,6 +34,11 @@
           Войти через Facebook
         </a>
       </li>
+      <li class="google">
+        <a href="{% url 'social:begin' 'google-oauth2' %}">
+          Войти через Google
+        </a>
+      </li>
     </ul>
   </div>
 {% endblock content %}
